<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AboutActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_author"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="64dp"
        android:scaleType="centerCrop"
        android:src="@drawable/my_photo"
        app:civ_border_color="@color/secondaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_author_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/opensans_semibold"
        android:text="@string/eldis_simone"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_author" />

    <TextView
        android:id="@+id/text_author_profession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/android_developer"
        android:textColor="@color/secondaryDarkColor"
        app:layout_constraintBottom_toBottomOf="@+id/image_separator"
        app:layout_constraintEnd_toStartOf="@+id/image_separator"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_author_name" />

    <ImageView
        android:id="@+id/image_separator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/simple_separator"
        android:contentDescription="@string/simple_separator"
        app:layout_constraintEnd_toStartOf="@+id/text_author_email"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_author_profession"
        app:layout_constraintTop_toBottomOf="@id/text_author_name" />

    <TextView
        android:id="@+id/text_author_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/eldisstti_gmail_com"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toBottomOf="@+id/image_separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/image_separator"
        app:layout_constraintTop_toBottomOf="@+id/text_author_name" />

    <TextView
        android:id="@+id/text_follow_me"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:fontFamily="@font/opensans_semibold"
        android:text="@string/follow_me"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_separator" />

    <ImageButton
        android:id="@+id/button_IG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_logos_instagram_icon"
        android:contentDescription="@string/follow_author_instagram_account"
        android:onClick="followIG"
        app:layout_constraintEnd_toStartOf="@+id/button_github"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_follow_me" />

    <ImageButton
        android:id="@+id/button_github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/ic_bi_github"
        android:contentDescription="@string/follow_author_github_account"
        android:onClick="followGithub"
        app:layout_constraintEnd_toStartOf="@+id/button_facebook"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_IG"
        app:layout_constraintTop_toBottomOf="@+id/text_follow_me" />

    <ImageButton
        android:id="@+id/button_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/ic_brandico_facebook_rect"
        android:contentDescription="@string/follow_author_github_account"
        android:onClick="followFacebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_github"
        app:layout_constraintTop_toBottomOf="@+id/text_follow_me" />

    <TextView
        android:id="@+id/text_app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/v1_0_0"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>