<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_8"
    android:layout_marginEnd="@dimen/margin_8"
    android:layout_marginBottom="@dimen/margin_16">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/image_air_craft_on_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_background"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/text_air_craft_name_on_list"
            android:contentDescription="@string/air_craft"/>

        <TextView
            android:id="@+id/text_air_craft_name_on_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/sukhoi_su_30sm"
            android:textColor="@color/primaryTextColor"
            android:textSize="12sp"
            android:paddingStart="@dimen/padding_8"
            android:paddingEnd="@dimen/padding_8"
            android:background="@color/secondaryColorTransparent"
            app:layout_constraintBottom_toTopOf="@+id/text_air_craft_codename_on_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_air_craft_codename_on_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/secondaryColorTransparent"
            android:fontFamily="@font/opensans_semibold"
            android:paddingStart="@dimen/padding_8"
            android:paddingEnd="@dimen/padding_8"
            android:text="@string/flanker"
            android:textColor="@color/primaryTextColor"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>